Fix alignment of accordion header on mobile

--- a/src/components/Form/Accordion/Accordion.scss
+++ b/src/components/Form/Accordion/Accordion.scss
@@ -345,7 +345,8 @@ button.usa-button-outline {
   .accordion .summary .summary-item-content .dates {
     display: block;
     margin-left: 0;
-    float: none;
+    float: none !important;
+    text-align: left !important;
   }
 }
 
